# chemtools

./: .gitignore  README.rst  fplcPlot.py  pyproject.toml
csvPlot/: README.rst  pyproject.toml
dataVis/: README.rst
dataVis/src/: cli.py  process.py
larmour/: README.rst  pyproject.toml
larmour/src/: __init__.py  larmour.py
src/: __init__.py  fplcPlot.py
